package Music_Player_example;

public interface Playable {
    void play();
    void pause();
}
